# LAB_INF

./: CMakeLists.txt
src/: CMakeLists.txt  conto.cpp  conto.h  main.cpp  transazione.cpp  transazione.h
test/: CMakeLists.txt  test_conto.cpp  test_transazione.cpp
